# poc_learning_buddy

./: main.py  poc_00_test_local_llm.py  poc_01_extract_pdf.py  poc_02_create_module.py  poc_035_gen_note.py  poc_03_create_learning_chunk.py  poc_04_semantic_splitter.py  poc_05_chunking_header.py  poc_06_chunking_header_llm.py  poc_07_semantic_header_blog copy.py  poc_07_semantic_header_blog.py  poc_08_metadata_check.py  poc_09_extract_with_topic_llm.py  poc_10_extract_no_safe_junk.py  poc_11_extract_topic_with_font_analysis_file.py  poc_12_gen_quiz.py  poc_13_gen_quiz_v2.py  poc_14_gen_flashcards.py  poc_15_gen_quiz_v3.py  poc_16_gen_quiz_v2_loop_type.py  pyproject.toml
data/: ai_auto_split.json  ai_list_split.json  blog_method_output.json  clean_structured_content.json  context_aware_split.json  debug_semantic_chunks.json  exam_prep_notes.json  extracted_text_01.md  final_full_course.json  final_rich_split.json  final_smart_course.json  final_textbook_course_debug.json  font_analysis_report.txt  font_stats.json  font_stats_debug.txt  hybrid_structured_content.json  request_quiz_gen.json  semantic_notes.json  smart_llm_split.json  smart_structure_extracted.json  universal_split.json
data/for_report/: quiz_result.txt
data/md/: extracted_text.md
docs/openapi/: openapi.yaml
docs/openapi/schemas/: AuthResponse.yaml  CourseDetailResponse.yaml  CourseMetadataDto.yaml  CoursePreviewResponse.yaml  CourseSummaryResponse.yaml  CreateCourseRequest.yaml  CreateCourseSuccessResponse.yaml  CreateDeckRequest.yaml  CreateQuizRequest.yaml  (+20 more)
result/: process-pdf-glm-1.json
