[project]
name = "learning-buddy-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "langchain-core",
    "langchain-ollama",
    "numpy>=2.3.5",
    "pdfplumber>=0.11.8",
    "pydantic",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]
